[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Hover/0.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Home.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Buttons/0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Press/0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Hover/26.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Buttons/22.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Press/14.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Buttons/1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Press/1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Hover/1.png" type="Texture" id=10]
[ext_resource path="res://Fonts/sixty.tres" type="DynamicFont" id=11]

[node name="Home" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
game = "res://Scenes/Main.tscn"
help = "res://Scenes/Help.tscn"

[node name="BackGround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -294.408
margin_top = 88.4799
margin_right = 318.592
margin_bottom = 156.48
custom_fonts/font = ExtResource( 11 )
text = "The Royal Game Of Ur"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Play" type="TextureButton" parent="HBoxContainer"]
margin_right = 120.0
margin_bottom = 122.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="HBoxContainer"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 122.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 5 )

[node name="Help" type="TextureButton" parent="HBoxContainer"]
margin_left = 248.0
margin_right = 368.0
margin_bottom = 122.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
[connection signal="button_up" from="HBoxContainer/Play" to="." method="_on_Play_button_up"]
[connection signal="button_up" from="HBoxContainer/Quit" to="." method="_on_Quit_button_up"]
[connection signal="button_up" from="HBoxContainer/Help" to="." method="_on_Help_button_up"]
